// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaFrame renders empty 1`] = `
<div>
  <pre
    class="styled__StyledPreformattedArea-sc-1dtvgs1-19 styled__StyledSchemaBody-sc-1dtvgs1-25 jaUnyF"
  >
    No indexes

No constraints

  </pre>
</div>
`;

exports[`SchemaFrame renders with result 1`] = `
<div>
  <pre
    class="styled__StyledPreformattedArea-sc-1dtvgs1-19 styled__StyledSchemaBody-sc-1dtvgs1-25 jaUnyF"
  >
    Indexes
   ON :Movie(released) ONLINE 

Constraints
   ON ( book:Book ) ASSERT book.isbn IS UNIQUE

  </pre>
</div>
`;
